--- a/design/src/main/res/values/strings.xml
+++ b/design/src/main/res/values/strings.xml
@@ -348,4 +348,8 @@
     <string name="hide_app_icon_desc">You can dial *#*#252746382#*#* to open this App</string>
     <string name="import_from_qr_no_permission">Camera access is restricted. Please enable it in Settings.</string>
     <string name="import_from_qr_exception">An unhandled system exception occurred.</string>
+
+    <string name="github_mirror">GitHub Acceleration</string>
+    <string name="github_mirror_summary">Prefix for GitHub URLs (e.g., https://ghfast.top)</string>
+    <string name="github_mirror_empty">Not configured</string>
 </resources>
