--- a/design/src/main/res/values-zh/strings.xml
+++ b/design/src/main/res/values-zh/strings.xml
@@ -38,7 +38,7 @@
     <string name="format_traffic_forwarded">%s 已转发</string>
     <string name="global_mode">全局模式</string>
     <string name="hide_app_icon_title">隐藏应用图标</string>
-    <string name="hide_app_icon_desc">恢复方法：系统设置 → 应用 → Clash Meta → 打开</string>
+    <string name="hide_app_icon_desc">恢复方法：浏览器访问 clash://restore-icon 或 系统设置→应用→打开</string>
     <string name="history">历史</string>
     <string name="import_from_file">从文件导入</string>
     <string name="import_from_url">从 URL 导入</string>
