--- a/design/src/main/res/values-zh/strings.xml
+++ b/design/src/main/res/values-zh/strings.xml
@@ -264,4 +264,40 @@
     <string name="github_mirror">GitHub 加速</string>
     <string name="github_mirror_summary">GitHub 地址前缀（如 https://ghfast.top）</string>
     <string name="github_mirror_empty">未配置</string>
+
+    <!-- Gist 备份 -->
+    <string name="gist_backup">Gist 备份</string>
+    <string name="gist_credentials">凭据配置</string>
+    <string name="github_token">GitHub Token</string>
+    <string name="github_token_hint">需要 gist 权限的个人访问令牌</string>
+    <string name="encryption_secret">加密密钥</string>
+    <string name="encryption_secret_hint">用于加密备份数据的密码</string>
+    <string name="configured">已配置</string>
+    <string name="not_configured">未配置</string>
+    <string name="gist_credentials_tips"><![CDATA[GitHub Token 需要 <strong>gist</strong> 权限。前往 GitHub 设置 → 开发者设置 → 个人访问令牌 创建]]></string>
+    <string name="backup_operations">备份操作</string>
+    <string name="backup_now">立即备份</string>
+    <string name="backup_now_summary">将当前设置和配置上传到 Gist</string>
+    <string name="restore_from_gist">从 Gist 恢复</string>
+    <string name="restore_from_gist_summary">从之前的备份下载并恢复</string>
+    <string name="manage_backups">管理备份</string>
+    <string name="manage_backups_summary">查看和删除旧备份</string>
+    <string name="gist_backup_tips"><![CDATA[备份使用 AES-256 加密并存储为<strong>私有</strong> Gist。请妥善保管加密密钥 - 它无法恢复！]]></string>
+    <string name="please_configure_credentials">请先配置 GitHub Token 和加密密钥</string>
+    <string name="please_configure_token">请先配置 GitHub Token</string>
+    <string name="backup_in_progress">正在备份</string>
+    <string name="backup_success">备份成功</string>
+    <string name="loading_backups">正在加载备份列表…</string>
+    <string name="no_backups_found">没有找到备份</string>
+    <string name="select_backup_to_restore">选择要恢复的备份</string>
+    <string name="restore_warning_title">恢复警告</string>
+    <string name="restore_warning_message">这将覆盖当前设置和配置。是否继续？</string>
+    <string name="restore">恢复</string>
+    <string name="restore_in_progress">正在恢复</string>
+    <string name="restore_success">恢复完成</string>
+    <string name="restart_app_message">请重启应用以应用更改。</string>
+    <string name="select_backups_to_delete">选择要删除的备份</string>
+    <string name="deleting_backups">正在删除备份…</string>
+    <string name="deleted_n_backups">已删除 %d 个备份</string>
+    <string name="deleted_with_errors">已删除 %1$d 个备份，%2$d 个失败</string>
 </resources>
