fix: 添加缺失的 unknown_error 字符串资源

--- a/design/src/main/res/values-zh/strings.xml
+++ b/design/src/main/res/values-zh/strings.xml
@@ -265,6 +265,8 @@
     <string name="github_mirror_summary">GitHub 地址前缀（如 https://ghfast.top）</string>
     <string name="github_mirror_empty">未配置</string>
 
+    <string name="unknown_error">未知错误</string>
+
     <!-- Gist 备份 -->
     <string name="gist_backup">Gist 备份</string>
     <string name="gist_credentials">凭据配置</string>
